Fix gap between stat elements

--- a/src/routes/Planet/Planet.module.css
+++ b/src/routes/Planet/Planet.module.css
@@ -119,5 +119,6 @@
 
   @media (min-width: 980px) {
     margin-block: var(--space-4xl);
+    gap: var(--space-md);
   }
 }
